--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kintzu-investor-microsite",
+  "name": "kintzu-microsite",
   "version": "1.0.0",
   "private": true,
   "type": "module",
